--- a/firstfile.html
+++ b/firstfile.html
@@ -2,9 +2,17 @@
     <head>
         <title>
             hello world!
+        <style>
+        
+        </style>
         </title>
     </head>
     <body>
+                <h1>This is H1</h1>
+                <h2>This is H2</h2>
+                <h3>This is H3</h3>
+                <h4>This is H4</h4>
+
         <div>
             This is a div tag. 
         </div>
